--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,13 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>NistPagesTemplate</title>
+<title>Cyber-Physical Systems Public Working Group</title>
 <meta name="viewport" content="width=device-width">
 <meta name="description" content="{{ site.description }}">
 <link rel="canonical" href="{{ site.rooturl }}{{ page.url }}">
 <link rel="shortcut icon" href="/favicon.ico">
 
 <!-- DAP Analytics -->
+<script type="text/javascript" id="_fed_an_ua_tag" src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency=DOC&subagency=NIST&pua=UA-66610693-1&yt=true&exts=ppsx,pps,f90,sch,rtf,wrl,txz,m1v,xlsm,msi,xsd,f,tif,eps,mpg,xml,pl,xlt,c"></script>
 
 <!-- Custom CSS -->
 <link rel="stylesheet" href="{{ site.baseurl }}/static/css/style.css">
