--- a/static/css/style.css
+++ b/static/css/style.css
@@ -303,7 +303,7 @@ input,button,select,textarea{
 }
 
 a{
-	color:#4cba6f;
+	color:#296DA0;
 	text-decoration:none
 }
 
@@ -3331,7 +3331,7 @@ input[type="submit"].btn-block,input[type="reset"].btn-block,input[type="button"
 	color:#fff;
 	text-decoration:none;
 	outline:0;
-	background-color:#4cba6f
+	background-color:#296DA0
 }
 
 .dropdown-menu>.disabled>a,.dropdown-menu>.disabled>a:hover,.dropdown-menu>.disabled>a:focus{
@@ -3761,7 +3761,7 @@ textarea.input-group-sm>.form-control,textarea.input-group-sm>.input-group-addon
 
 .nav .open>a,.nav .open>a:hover,.nav .open>a:focus{
 	background-color:#eee;
-	border-color:#4cba6f
+	border-color:#296DA0
 }
 
 .nav .nav-divider{
@@ -3869,7 +3869,7 @@ textarea.input-group-sm>.form-control,textarea.input-group-sm>.input-group-addon
 
 .nav-pills>li.active>a,.nav-pills>li.active>a:hover,.nav-pills>li.active>a:focus{
 	color:#fff;
-	background-color:#4cba6f
+	background-color:#296DA0
 }
 
 .nav-stacked>li{
@@ -4526,7 +4526,7 @@ textarea.input-group-sm>.form-control,textarea.input-group-sm>.input-group-addon
 	padding:6px 12px;
 	line-height:1.42857143;
 	text-decoration:none;
-	color:#4cba6f;
+	color:#296DA0;
 	background-color:#fff;
 	border:1px solid #ddd;
 	margin-left:-1px
@@ -4552,8 +4552,8 @@ textarea.input-group-sm>.form-control,textarea.input-group-sm>.input-group-addon
 .pagination>.active>a,.pagination>.active>span,.pagination>.active>a:hover,.pagination>.active>span:hover,.pagination>.active>a:focus,.pagination>.active>span:focus{
 	z-index:2;
 	color:#fff;
-	background-color:#4cba6f;
-	border-color:#4cba6f;
+	background-color:#296DA0;
+	border-color:#296DA0;
 	cursor:default
 }
 
@@ -4669,7 +4669,7 @@ textarea.input-group-sm>.form-control,textarea.input-group-sm>.input-group-addon
 }
 
 .label-primary{
-	background-color:#4cba6f
+	background-color:#296DA0
 }
 
 .label-primary[href]:hover,.label-primary[href]:focus{
@@ -4744,7 +4744,7 @@ a.badge:hover,a.badge:focus{
 }
 
 a.list-group-item.active>.badge,.nav-pills>.active>a>.badge{
-	color:#4cba6f;
+	color:#296DA0;
 	background-color:#fff
 }
 
@@ -4812,7 +4812,7 @@ a.list-group-item.active>.badge,.nav-pills>.active>a>.badge{
 }
 
 a.thumbnail:hover,a.thumbnail:focus,a.thumbnail.active{
-	border-color:#4cba6f
+	border-color:#296DA0
 }
 
 .thumbnail .caption{
@@ -4951,7 +4951,7 @@ a.thumbnail:hover,a.thumbnail:focus,a.thumbnail.active{
 	line-height:20px;
 	color:#fff;
 	text-align:center;
-	background-color:#4cba6f;
+	background-color:#296DA0;
 	-webkit-box-shadow:inset 0 -1px 0 rgba(0,0,0,0.15);
 	box-shadow:inset 0 -1px 0 rgba(0,0,0,0.15);
 	-webkit-transition:width .6s ease;
@@ -5088,8 +5088,8 @@ a.list-group-item:hover,a.list-group-item:focus{
 a.list-group-item.active,a.list-group-item.active:hover,a.list-group-item.active:focus{
 	z-index:2;
 	color:#fff;
-	background-color:#4cba6f;
-	border-color:#4cba6f
+	background-color:#296DA0;
+	border-color:#296DA0
 }
 
 a.list-group-item.active .list-group-item-heading,a.list-group-item.active:hover .list-group-item-heading,a.list-group-item.active:focus .list-group-item-heading{
@@ -5386,21 +5386,21 @@ a.list-group-item-danger.active,a.list-group-item-danger.active:hover,a.list-gro
 }
 
 .panel-primary{
-	border-color:#4cba6f
+	border-color:#296DA0
 }
 
 .panel-primary>.panel-heading{
 	color:#fff;
-	background-color:#4cba6f;
-	border-color:#4cba6f
+	background-color:#296DA0;
+	border-color:#296DA0
 }
 
 .panel-primary>.panel-heading+.panel-collapse .panel-body{
-	border-top-color:#4cba6f
+	border-top-color:#296DA0
 }
 
 .panel-primary>.panel-footer+.panel-collapse .panel-body{
-	border-bottom-color:#4cba6f
+	border-bottom-color:#296DA0
 }
 
 .panel-success{
@@ -6385,13 +6385,13 @@ body,html{
 
 h1{
 	font:48px / 3em;
-	color:#4cba6f;
+	color:#296DA0;
 	font-weight:700
 }
 
 h2{
 	font:30px / 1.875em;
-	color:#1d9967;
+	color:#296DA5;
 	font-weight:700
 }
 
@@ -6478,7 +6478,7 @@ header.banner .banner-title h1{
 	font-size:24px;
 	line-height:40px;
 	margin-left:10px;
-	color:#4cba6f
+	color:#296DA0
 }
 
 header.banner .banner-nav{
@@ -6558,7 +6558,7 @@ section.home{
 	min-height:468px;
 	max-height:625px;
 	margin-top:40px;
-	color:#4cba6f;
+	color:#296DA0;
 	background-size:cover;
 	background-position:center center
 }
@@ -6587,7 +6587,7 @@ section.home{
 }
 
 .home-title h2{
-	background:#4cba6f;
+	background:#296DA0;
 	background:rgba(76,186,111,0.9);
 	color:#fff;
 	min-height:80px;
@@ -6660,12 +6660,12 @@ section.home.home-about .audiences li .icon{
 }
 
 section.home.home-about .audiences li h3{
-	color:#4cba6f
+	color:#296DA0
 }
 
 section.home.home-about .audiences .icon{
 	font-size:60px;
-	background:#4cba6f;
+	background:#296DA0;
 	width:150px;
 	height:150px;
 	line-height:120px;
@@ -6718,13 +6718,13 @@ section.home.home-about .gb-list li .icon{
 section.home.home-about .gb-list li h3{
         display:block;
         *float:left;
-	color:#4cba6f
+	color:#296DA0
 }
 
 section.home.home-about .gb-list .icon{
 	float:left;
 	font-size:20px;
-	background:#4cba6f;
+	background:#296DA0;
 	width:50px;
 	height:50px;
 	line-height:40px;
