--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,12 +6,15 @@
 <link rel="canonical" href="{{ site.rooturl }}{{ page.url }}">
 <link rel="shortcut icon" href="/favicon.ico">
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
 <!-- DAP Analytics -->
 <script type="text/javascript" id="_fed_an_ua_tag" src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency=DOC&subagency=NIST&pua=UA-66610693-1&yt=true&exts=ppsx,pps,f90,sch,rtf,wrl,txz,m1v,xlsm,msi,xsd,f,tif,eps,mpg,xml,pl,xlt,c"></script>
 
 <!-- Custom CSS -->
 <link rel="stylesheet" href="{{ site.baseurl }}/static/css/style.css">
-
+ 
 <!-- Shadowbox setup -->
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/static/shadowbox-3.0.3/shadowbox.css">
 <script type="text/javascript" src="{{ site.baseurl }}/static/shadowbox-3.0.3/shadowbox.js"></script>
