--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -11,7 +11,7 @@
 				<div class="banner-nav">
 					<nav role="navigation" class="main-nav">
 						<ul>
-							<li><a href="http://www.nist.gov/smartgrid/cpspwg.cfm">About Us</a></li>
+							<li><a href="{{ site.baseurl }}/aboutus">About Us</a></li>
 							<li><a href="{{ site.baseurl }}/community">Working Groups</a></li>
 							<li><a href="{{ site.baseurl }}/library">Resources</a></li>
 							<li><a href="mailto:CPSPWGCoordinator@energetics.com?subject=CPSPWG website Contact&#038;body=Hi!%0A%0AI’d%20like%20to%20learn%20more%20about%20how%20our%20organization%20can%20participate%20in%20the%20cpspwg.%20Please%20send%20me%20more%20information.%0A%0AThanks,%0A%0A[Your%20name]%0A[Your%20organization]%0A[Your%20contact%20information]" class="btn btn-primary">Get Started</a></li>
