--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,14 @@
    Shadowbox.init();
 </script>
 
+
+<!-- Carousel setup -->
+<script type="text/javascript">
+    $('#myCarousel').carousel({
+        interval:5000;
+    });
+</script>
+
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
