resolve energetics comments

--- a/_includes/elinclude.html
+++ b/_includes/elinclude.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="{{ site.baseurl }}/static/css/nist_github_header.css">
 <header class="nist-header">
 	<h1>
-	  <a class="nist-logo" href="http://www.nist.gov/" title="Go to nist.gov">National Institute of Standards and Technology</a>
+	  <a class="nist-logo" href="http://www.nist.gov/cps" title="Go to nist.gov">National Institute of Standards and Technology</a>
 	</h1>
 	<div class="nist-links">
 	  <a class="nist-links-button" href="http://www.nist.gov">NIST Website</a>
